--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "@strapi/plugin-cloud": "5.12.1",
     "@strapi/plugin-users-permissions": "5.12.1",
     "@strapi/provider-email-nodemailer": "^5.7.0",
     "@strapi/strapi": "5.12.1",
+    "expo-server-sdk": "^3.15.0",
+    "ioredis": "^5.6.1",
     "mysql2": "3.9.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
