--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@alicloud/green20220302": "^2.19.1",
     "@socket.io/redis-adapter": "^8.3.0",
     "@strapi/plugin-cloud": "5.12.1",
     "@strapi/plugin-users-permissions": "5.12.1",
